--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: dock_progress
 description: "Shows progress animation on macos dock icon"
 version: 0.0.1
-homepage: 
+homepage: https://github.com/edex96/dock_progress
 
 environment:
-  sdk: ^3.9.2
+  sdk: ^3.10.4
+  flutter: '>=3.3.0'
 
 dependencies:
   flutter:
